[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynja = { version = "0.4", path = "../dynja/dynja" }
askama = { version = "0.12", optional = true }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }

[features]
default = ["askama_release"]
askama_release = ["dynja/askama_release", "dep:askama"]
